--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -111,7 +111,7 @@ main {
     padding-bottom: 8px;
     border: 2px solid #000;
     border-radius: 5px;
-    font-size: clap(5px, 5vw, 1rem);
+    font-size: clamp(5px, 5vw, 1rem);
     font-weight: 600;
     color: white;
     background-color: #444;
