--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -15,7 +15,18 @@ body {
 
 header {
     width: 100vw;
-    ;
+   .nav-bar{
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 98vw;
+    background: #000;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-around ;
+
+    }
 }
 nav{
     display: flex;
@@ -24,6 +35,19 @@ nav{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 background: #000;
 height: 8vh;
+}
+.mobile-menu div{
+width: 32px;
+height: 2px;
+background:#fff;
+margin: 8px;
+}
+.mobile-menu{
+    cursor: pointer;
+    
+}
+@media(max-width:999px){
+    .nav
 }
 
 ul {
