--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -35,6 +35,7 @@ nav{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 background: #000;
 height: 8vh;
+width: auto;
 }
 .mobile-menu div{
 width: 32px;
