--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -35,7 +35,7 @@ nav{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 background: #000;
 height: 8vh;
-width: auto;
+width: 100%;
 }
 .mobile-menu div{
 width: 32px;
