--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -36,6 +36,26 @@ nav{
 background: #000;
 height: 8vh;
 width: 100vw;
+position: relative;
+}
+.navBar{
+    background-color: rgba(0, 0, 0, 0.479);
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding-top: 10vh;
+    text-align: left;
+    display: none;
+    flex-direction: column;
+    width: 50%;
+    height: 90vh;
+    z-index: 1;
+}
+.mobile-menu{
+    cursor: pointer;
+    z-index: 2;
+    margin-left: 10px;
+    left: 0;
 }
 .mobile-menu div{
 width: 32px;
@@ -45,7 +65,9 @@ margin: 8px;
 }
 .mobile-menu{
     cursor: pointer;
-    
+    position: absolute;
+    left: 0;
+    margin-left: 10px;
 }
 
 ul {
@@ -157,4 +179,19 @@ main {
     background-color: red;
     box-shadow: inset -4px 4px 0 #222;
     font-size: 0.9rem;
+}
+@media (max-width: 768px) {
+   .navBar{
+    display:none;
+    position: relative;
+    width: 100%;
+   }
+   .mobile-menu{
+    position: absolute;
+    left: 0;
+    margin-left: 10px;
+   }
+   nav{
+position: relative;
+   } 
 }
